force-app/main/default/objects/SandboxUser__c/SandboxUser__c.object-meta.xml
<CustomObject>
    <description>SandboxUser</description>
    <label>Sandbox User</label>
    <nameField>
        <label>Sandbox User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandbox Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>