force-app/main/default/objects/SandboxUser__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email</description>
    <inlineHelpText>Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>