force-app/main/default/objects/SandboxUser__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>LastName</description>
    <inlineHelpText>LastName</inlineHelpText>
    <label>LastName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>