force-app/main/default/objects/SandboxUser__c/fields/SanboxName__c.field-meta.xml
<CustomField>
    <fullName>SanboxName__c</fullName>
    <description>SanboxName</description>
    <inlineHelpText>SanboxName</inlineHelpText>
    <label>SanboxName</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>