force-app/main/default/objects/SandboxUser__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>UserName</description>
    <inlineHelpText>UserName</inlineHelpText>
    <label>UserName</label>
    <type>Email</type>
</CustomField>