force-app/main/default/objects/SandboxUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SanboxName__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>UserName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>